# pystructurizr

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: COMPATIBILITY_ROADMAP.md  MIGRATION.md  README.md  data-models.md  roadmap.md  structurizr-parity.md
docs/prompts/: nicegui_app.prompt.md
editors/vscode/: .gitignore  .vscodeignore  README.md  language-configuration.json  package-lock.json  package.json  tsconfig.json
editors/vscode/src/: extension.ts  preview.ts  resolve.ts
editors/vscode/syntaxes/: structurizr-dsl.tmLanguage.json
frontend/: .gitignore  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.config.ts
frontend/src/: App.tsx  api.ts  export.ts  highlight.ts  index.css  layout.ts  main.tsx  navigation.ts  shortcuts.ts  types.ts
frontend/src/components/: BoundaryNode.tsx  DocsPane.tsx  ElementNode.tsx  ElementTree.tsx  ExplorerPane.tsx  ExportButtons.tsx  FilePicker.tsx  FloatingEdge.tsx  GraphPane.tsx  KeyboardShortcuts.tsx  ShortcutHelp.tsx  SourcePane.tsx  TopBar.tsx  ViewList.tsx
samples/: ecommerce_platform.dsl  internet_banking.dsl  saas_monitoring.dsl
samples/hedge_fund/: workspace.dsl  workspace.layout.json
samples/hedge_fund/adrs/: 0001-record-architecture-decisions.md  0002-colocate-execution.md  0003-kdb-for-tick-storage.md
samples/hedge_fund/docs/: 01-overview.md  02-order-flow.md  03-deployment.md
samples/hedge_fund/model/: deployment.dsl  ems.dsl  externals.dsl  market_data.dsl  oms.dsl  people.dsl  relationships.dsl  risk.dsl
src/pystructurizr/: __init__.py  __main__.py  models.py  themes.py
tests/: conftest.py  test_models.py  test_themes.py
tests/fixtures/: example.dsl  example.json
tests/test_generators/: test_json_export.py  test_mermaid.py  test_mermaid_groups.py
tests/test_parser/: test_dsl.py  test_dsl_constants.py  test_dsl_deployment.py  test_dsl_directives.py  test_dsl_element_bodies.py  test_dsl_groups.py  test_dsl_implied.py  test_dsl_new_elements.py  test_dsl_relationships.py  test_dsl_styles_config.py  test_dsl_views.py  test_expressions.py  test_json_parser.py  test_locations.py
tests/test_viewer/: test_app.py
tests/test_webapp/: __init__.py  test_filtered_views.py  test_g6_view.py  test_group_boundaries.py  test_model_graph.py  test_server.py  test_view_defaults.py  test_view_graph.py
(+74 files in other folders)
